fixes scrollbars

--- a/web/css/diagrams.css
+++ b/web/css/diagrams.css
@@ -13,10 +13,7 @@ body {
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
-	margin-bottom: 10px;
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-top: 10px;
+	margin 0 important!;
 	padding-bottom: 0px;
 	padding-left: 0px;
 	padding-right: 0px;
@@ -149,6 +146,3 @@ legend {
 	color: #0000FF;
 	font-size: 64px;
 }
-
-
-
